--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: python
 
 python:
   - "3.5"
-
+install:
+  - pip install coveralls
+  - pip install unittest
 script:
   - make
 after_success:
